force-app/main/default/objects/Metadata_Log__c/Metadata_Log__c.object-meta.xml
<CustomObject>
    <label>Metadata Log</label>
    <nameField>
        <displayFormat>ML-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Metadata Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>