force-app/main/default/objects/Metadata_Log__c/fields/Async_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Async_Request_Id__c</fullName>
    <description>Id of the retrieval or deployment request sent to Salesforce organisation</description>
    <label>Deployment Request Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>