force-app/main/default/objects/Metadata_Log__c/fields/Automation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Automation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automation Completed?</label>
    <type>Checkbox</type>
</CustomField>