force-app/main/default/objects/Metadata_Log__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <description>Job Id which is processing Metadata types and items</description>
    <label>Batch Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>