force-app/main/default/objects/Metadata_Log__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Metadata Logs</relationshipLabel>
    <relationshipName>Metadata_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>