force-app/main/default/objects/Metadata_Log__c/fields/Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Code_Coverage__c</fullName>
    <label>Code Coverage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>