force-app/main/default/objects/Metadata_Log__c/fields/Deployment_Name__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Name__c</fullName>
    <label>Deployment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>