force-app/main/default/objects/Metadata_Log__c/fields/Is_Vlocity__c.field-meta.xml
<CustomField>
    <fullName>Is_Vlocity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Vlocity</label>
    <type>Checkbox</type>
</CustomField>