force-app/main/default/objects/Metadata_Log__c/fields/Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Job_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show if the process related to deployment or retrieve has been completed or not for the current  Async request Id</description>
    <label>Job Completed?</label>
    <type>Checkbox</type>
</CustomField>