force-app/main/default/objects/Metadata_Log__c/fields/Metadata_Types__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Types__c</fullName>
    <label>Metadata Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>