force-app/main/default/objects/Metadata_Log__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <description>Other options for deployment/validation</description>
    <label>Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>