force-app/main/default/objects/Metadata_Log__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Organisation__c</referenceTo>
    <relationshipLabel>Metadata Logs</relationshipLabel>
    <relationshipName>Metadata_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>