force-app/main/default/objects/Metadata_Log__c/fields/Patch__c.field-meta.xml
<CustomField>
    <fullName>Patch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment</label>
    <referenceTo>Patch__c</referenceTo>
    <relationshipLabel>Metadata Logs</relationshipLabel>
    <relationshipName>Metadata_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>