force-app/main/default/objects/Metadata_Log__c/fields/PipelineStepId__c.field-meta.xml
<CustomField>
    <fullName>PipelineStepId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PipelineStepId</label>
    <referenceTo>PipelineStep__c</referenceTo>
    <relationshipLabel>Metadata Logs</relationshipLabel>
    <relationshipName>Metadata_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>