force-app/main/default/objects/Metadata_Log__c/fields/Process_Log__c.field-meta.xml
<CustomField>
    <fullName>Process_Log__c</fullName>
    <description>Log detail of Deployment/Retrieval</description>
    <label>Specified Tests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>