force-app/main/default/objects/Metadata_Log__c/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <description>Determine the process for which the log has been created</description>
    <label>Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patch</fullName>
                <color>#0B6FCE</color>
                <label>Patch</label>
            </value>
            <value>
                <fullName>Deployment</fullName>
                <color>#78C953</color>
                <label>Deployment</label>
            </value>
            <value>
                <fullName>Validate</fullName>
                <color>#E27001</color>
                <label>Validate</label>
            </value>
            <value>
                <fullName>Retrieve</fullName>
                <color>#A845DC</color>
                <label>Retrieve</label>
            </value>
            <value>
                <fullName>Rollback (Validate)</fullName>
            </value>
            <value>
                <fullName>Rollback (Deployment)</fullName>
            </value>
            <value>
                <fullName>Schedule Deployment</fullName>
            </value>
            <value>
                <fullName>Test Execution</fullName>
            </value>
            <value>
                <fullName>Test Execution Job</fullName>
            </value>
            <value>
                <fullName>Clean Org Data</fullName>
            </value>
            <value>
                <fullName>Install Vlocity Initial</fullName>
            </value>
            <value>
                <fullName>Pack Retry (Heroku)</fullName>
            </value>
            <value>
                <fullName>Tracking Organization - Retrieve</fullName>
            </value>
            <value>
                <fullName>AccelQ</fullName>
            </value>
            <value>
                <fullName>Veeva Rollback (Deployment)</fullName>
            </value>
            <value>
                <fullName>Veeva Deployment</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>