force-app/main/default/objects/Metadata_Log__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <formula>IF(
        AND(Job_Completed__c , Succeed__c, NOT(Is_Error__c)) ,
        IMAGE(&apos;/resource/&apos;+$Setup.Credentials__c.Namespace__c+&apos;IconsUtility/Success.png&apos;, &apos;No issues&apos;, 30, 150) ,
        IF(
            AND(Job_Completed__c , Succeed__c, Is_Error__c) ,
            IMAGE(&apos;/resource/&apos;+$Setup.Credentials__c.Namespace__c+&apos;IconsUtility/Partial.png&apos;, &apos;Issues found&apos;, 30, 150) ,
            IF(
                AND(NOT(Job_Completed__c) , ISPICKVAL(Status__c, &apos;Not Started&apos;) ) ,
                IMAGE(&apos;/resource/&apos;+$Setup.Credentials__c.Namespace__c+&apos;IconsUtility/NotStarted.png&apos;, &apos;Not Started&apos;, 30, 150) ,
                IF(
                     AND(Job_Completed__c, ISPICKVAL(Status__c, &apos;Did Not Run&apos;) ) ,
                     IMAGE(&apos;/resource/&apos;+$Setup.Credentials__c.Namespace__c+&apos;IconsUtility/DidNotRun.png&apos;, &apos;Did Not Run&apos;, 30, 150) ,
                     IF (
                         NOT(Job_Completed__c),
                         IMAGE(&apos;/resource/&apos;+$Setup.Credentials__c.Namespace__c+&apos;IconsUtility/Progress.png&apos;, &apos;In Progress&apos;, 30, 150),
                         IMAGE(&apos;/resource/&apos;+$Setup.Credentials__c.Namespace__c+&apos;IconsUtility/Failed.png&apos;, &apos;Issues found&apos;, 30, 150)
                     )
                )
            )
        )
)</formula>
    <label>Result</label>
    <type>Text</type>
</CustomField>