force-app/main/default/objects/Metadata_Log__c/fields/Run_Test_Param__c.field-meta.xml
<CustomField>
    <fullName>Run_Test_Param__c</fullName>
    <label>Run Test Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>