force-app/main/default/objects/Metadata_Log__c/fields/Succeed__c.field-meta.xml
<CustomField>
    <fullName>Succeed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show if the job process completed with success or error</description>
    <label>Succeed?</label>
    <type>Checkbox</type>
</CustomField>