force-app/main/default/objects/Metadata_Log__c/fields/Success_Log__c.field-meta.xml
<CustomField>
    <fullName>Success_Log__c</fullName>
    <label>Success Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>