force-app/main/default/objects/Metadata_Log__c/recordTypes/Validate.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Validate</fullName>
    <label>Validate</label>
</RecordType>